WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313367
[Site Isolation] http/wpt/clear-site-data/partitioning.html fails
https://bugs.webkit.org/show_bug.cgi?id=313367
Summary
[Site Isolation] http/wpt/clear-site-data/partitioning.html fails
Ryosuke Niwa
Reported
2026-04-26 16:07:23 PDT
http/wpt/clear-site-data/partitioning.html fails with --site-isolation
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2026-04-26 16:11:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63646
EWS
Comment 2
2026-04-27 23:41:27 PDT
Committed
312181@main
(3ea8ec0d213c): <
https://commits.webkit.org/312181@main
> Reviewed commits have been landed. Closing PR #63646 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-04-27 23:42:14 PDT
<
rdar://problem/175735252
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug