[Site Isolation] http/wpt/clear-site-data/partitioning.html fails https://bugs.webkit.org/show_bug.cgi?id=313367

Reviewed by Sihui Liu.

When a popup's main frame process-swaps (e.g., localhost→127.0.0.1), the old process's
Page goes through Local -> Remote transition. setMainFrame(RemoteFrame) resets
m_topDocumentSyncData to empty, and the DocumentSyncData broadcast from the new process
gets dropped because it arrives while the main frame is still a LocalFrame (about:blank).
Later, when a cross-origin subframe loads in the old process, topOrigin is wrong.

Fixed the test by passing the committed URL in the LoadDidCommitInAnotherProcess IPC.
After the frame transitions to RemoteFrame, call setMainFrameURLAndOrigin to set the
correct origin directly — no reliance on broadcast timing.

Co-authored with Claude.

Test: http/wpt/clear-site-data/partitioning.html

* LayoutTests/platform/ios-site-isolation/TestExpectations:
* LayoutTests/platform/mac-site-isolation/TestExpectations:
* Source/WebKit/UIProcess/ProvisionalPageProxy.cpp:
(WebKit::ProvisionalPageProxy::didCommitLoadForFrame):
* Source/WebKit/UIProcess/WebFrameProxy.cpp:
(WebKit::WebFrameProxy::commitProvisionalFrame):
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::loadDidCommitInAnotherProcess):
* Source/WebKit/WebProcess/WebPage/WebPage.h:
* Source/WebKit/WebProcess/WebPage/WebPage.messages.in:

Canonical link: https://commits.webkit.org/312181@main